src/tests/text_document/snapshots/texlab__tests__text_document__completion__project_resolution_texlabroot.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%TEX src/main.tex\n%SRC \\documentclass{article}\n%SRC \\include{src/foo}\n%SRC \\lipsu\n%CUR      ^\n%1.1  ^^^^^\n\n%TEX src/foo.tex\n%SRC \\include{src/bar}\n\n%TEX src/bar.tex\n%SRC \\usepackage{lipsum}\n\n%ROOT .texlabroot\n\"#)"
---
[
  {
    "detail": "lipsum.sty",
    "kind": 1,
    "label": "lipsum",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "lipsum"
    }
  },
  {
    "detail": "lipsum.sty",
    "kind": 1,
    "label": "lipsumexp",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "lipsumexp"
    }
  },
  {
    "detail": "lipsum.sty",
    "kind": 1,
    "label": "LipsumPar",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "LipsumPar"
    }
  },
  {
    "detail": "lipsum.sty",
    "kind": 1,
    "label": "LipsumProtect",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "LipsumProtect"
    }
  },
  {
    "detail": "lipsum.sty",
    "kind": 1,
    "label": "LipsumRestoreAll",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "LipsumRestoreAll"
    }
  }
]
