src/tests/text_document/snapshots/texlab__tests__text_document__completion__user_environment.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\foobar\n%SRC \\fooba\n%SRC \\begin{foo}\n%SRC \\end{foo}\n%SRC \\begin{fo}\n%CUR         ^\n%1.1        ^^\n\"#)?"
---
[
  {
    "detail": "user-defined",
    "kind": 1,
    "label": "foo",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "foo"
    }
  },
  {
    "detail": "built-in",
    "kind": 1,
    "label": "filecontents",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "filecontents"
    }
  }
]
